# illuminate-mcp-opensource

./: .env.example  .gitignore  DESIGN.md  IMPLEMENTATION_PLAN.md  OPERATOR_RUNBOOK.md  README.md  WORKBOARD.md  package-lock.json  pyproject.toml  run_inspector_server.sh
src/illuminate_mcp/: __init__.py  async_jobs.py  budget.py  config.py  domain_router.py  exceptions.py  execution.py  feedback.py  insights.py  insights_app.py  main.py  mcp_server.py  metadata.py  output.py  planner.py  policy.py  query_optimizer.py  refinement.py  results_app.py  schema_explorer_app.py  semantic_model.py  session.py  snowflake_conn.py  sql_viewer_app.py  stdio.py  tokens.py  tool_handlers.py
tests/: test_async_jobs.py  test_config.py  test_domain_router.py  test_execution.py  test_execution_metrics.py  test_feedback.py  test_mcp_server.py  test_metadata.py  test_no_data_diagnostics.py  test_output.py  test_plan_query.py  test_planner.py  test_policy.py  test_semantic_model.py
